--- a/security-demo/src/main/resources/templates/403.html
+++ b/security-demo/src/main/resources/templates/403.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<meta charset="UTF-8">
+<title>403</title>
 </head>
 <body>
-    <h1>权限不足，无法访问</h1>
+	<b>权限不足！！！</b>
+	<a href="/">返回首页</a>
 </body>
 </html>
